info about controls might help...

--- a/upvotesnake.html
+++ b/upvotesnake.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-It was I, jac, who made this on Friday 19th - Saturday 20th December 2014.
+It was I, drjac, who made this on Friday 19th - Saturday 20th December 2014.
 Do with it what you will. But my will for you is to do with it that which will make it more awesome. You have come this far my good friend. I pre-empt you looking my code up and down like a filty whore. Well you take this whore and penetrate its inner workings with your talented fingers until her eyes light up like a power surge through an overdecorated Christmas tree. Those are my conditions. Take them or leave them. But if you take them, take them hard *narrows eyes whilst nodding head*.
 -->
 <html>
@@ -194,6 +194,9 @@ var timer = setInterval(step, 50);
 document.addEventListener("keydown", keyDown, false);
 
 </script>
+<br>
+Use arrow keys to control and press escape to restart.
+May be uncompletable... *shrugs* *yawns*
 
 </body>
 </html>
